--- a/style.css
+++ b/style.css
@@ -16,6 +16,24 @@ h1 {
   font-size: 80px;
   color: antiquewhite;
 }
+h4 {
+  font-size: 30px;
+  margin-bottom: 5px;
+}
+.hinzufuegen {
+  margin-top: 10px;
+  text-align: center;
+}
+input {
+  font-size: 20px;
+}
+.btn {
+  font-size: 20px;
+  border-radius: 20px;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+}
 main {
   display: grid;
 }
