--- a/style.css
+++ b/style.css
@@ -11,10 +11,12 @@ body {
   background-color: rgb(166, 139, 190);
 }
 header {
-  height: 150px;
+  height: 250px;
   width: auto;
   background-color: rgb(61, 43, 78);
   text-align: center;
+  position: sticky;
+  top: 0;
 }
 h1 {
   padding-top: 30px;
@@ -26,11 +28,13 @@ h4 {
   margin-bottom: 5px;
 }
 .hinzufuegen {
-  margin-top: 10px;
+  margin-top: 30px;
   text-align: center;
+  background-color: rgb(166, 139, 190);
 }
 input {
   font-size: 20px;
+
   margin-bottom: 20px;
 }
 .btn {
@@ -42,11 +46,22 @@ input {
 }
 .bookShelf {
   display: flex;
+  flex-wrap: wrap;
+}
+p {
+  line-height: 140%;
+}
+.btn2 {
+  margin-top: 20px;
+  padding: 10px;
+  border: 3px solid rgb(61, 43, 78);
+  background-color: rgb(180, 112, 245);
+  border-radius: 15px;
 }
 .container {
   margin: 30px;
   padding-top: 40px;
-  height: 250px;
+  height: 300px;
   width: 220px;
   border: 3px solid rgb(61, 43, 78);
   background-color: rgb(129, 81, 173);
